# sim

./: Cargo.toml
assets/sprites/: circle.ron
config/: display_config.ron
src/: main.rs  state.rs
src/comp/: collider.rs  creature.rs  food.rs  mod.rs
src/sys/: collision.rs  mod.rs  movement.rs
